--- a/supervisord.conf
+++ b/supervisord.conf
@@ -10,17 +10,21 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisord]
 nodaemon=true
-logfile=%(ENV_HOME)s/logs/supervisord.log ; supervisord log file
-logfile_maxbytes=50MB       ; maximum size of logfile before rotation
-logfile_backups=10          ; number of backed up logfiles
-loglevel=debug              ; info, debug, warn, trace
+logfile=/dev/null
+logfile_maxbytes=0       ; maximum size of logfile before rotation
+logfile_backups=0          ; number of backed up logfiles
+loglevel=critical              ; info, debug, warn, trace
 pidfile=/tmp/supervisord/supervisord.pid ; pidfile location
-childlogdir=%(ENV_HOME)s/logs/            ; where child log files will live
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
 [program:ssh-agent]
 command=bash -c "rm /tmp/ssh-agent.sock -f && /usr/bin/ssh-agent -d -a /tmp/ssh-agent.sock"
 priority=1
 autorestart=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:rqworker_default]
 command=%(ENV_HOME)s/wait-for-it.sh cvat_redis:6379 -t 0 -- bash -ic \
@@ -28,23 +32,32 @@ command=%(ENV_HOME)s/wait-for-it.sh cvat_redis:6379 -t 0 -- bash -ic \
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=2
 process_name=rqworker_default_%(process_num)s
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:rqworker_low]
 command=%(ENV_HOME)s/wait-for-it.sh redis:6379 -t 0 -- bash -ic \
     "exec /usr/bin/python3 %(ENV_HOME)s/manage.py rqworker -v 3 low"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:git_status_updater]
 command=%(ENV_HOME)s/wait-for-it.sh redis:6379 -t 0 -- bash -ic \
     "/usr/bin/python3 ~/manage.py update_git_states"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
 
 [program:runserver]
-; Here need to run a couple of commands to initialize DB and copy static files.
+; Here need to/var/log/supervisor/ run a couple of commands to initialize DB and copy static files.
 ; We cannot initialize DB on build because the DB should be online. Also some
-; apps are dynamically loaded by an environment variable. It can lead to issues
+; apps are dynamically /var/log/supervisor/loaded by an environment variable. It can lead to issues
 ; with docker cache. Thus it is necessary to run collectstatic here for such
 ; apps.
 command=%(ENV_HOME)s/wait-for-it.sh db:5432 -t 0 -- bash -ic \
@@ -54,3 +67,7 @@ command=%(ENV_HOME)s/wait-for-it.sh db:5432 -t 0 -- bash -ic \
     --limit-request-body 1073741824 --log-level INFO --include-file ~/mod_wsgi.conf \
     %(ENV_DJANGO_MODWSGI_EXTRA_ARGS)s --locale %(ENV_LC_ALL)s"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
