--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,6 +17,7 @@ loglevel=critical              ; info, debug, warn, trace
 pidfile=/tmp/supervisord/supervisord.pid ; pidfile location
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
+user=%(ENV_USER)
 
 [program:ssh-agent]
 command=bash -c "rm /tmp/ssh-agent.sock -f && /usr/bin/ssh-agent -d -a /tmp/ssh-agent.sock"
