Fixes path issues

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,8 @@
 [unix_http_server]
-file = /tmp/supervisord/supervisor.sock
+file = /var/run/supervisor/supervisor.sock
 
 [supervisorctl]
-serverurl = unix:///tmp/supervisord/supervisor.sock
+serverurl = unix:///var/run/supervisor/supervisor.sock
 
 
 [rpcinterface:supervisor]
@@ -14,10 +14,10 @@ logfile=/dev/null
 logfile_maxbytes=0       ; maximum size of logfile before rotation
 logfile_backups=0          ; number of backed up logfiles
 loglevel=critical              ; info, debug, warn, trace
-pidfile=/tmp/supervisord/supervisord.pid ; pidfile location
+pidfile=/var/run/supervisor/supervisord.pid ; pidfile location
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-user=%(ENV_USER)
+user=%(ENV_USER)s
 
 [program:ssh-agent]
 command=bash -c "rm /tmp/ssh-agent.sock -f && /usr/bin/ssh-agent -d -a /tmp/ssh-agent.sock"
