--- a/supervisord.conf
+++ b/supervisord.conf
@@ -64,7 +64,7 @@ redirect_stderr=true
 command=%(ENV_HOME)s/wait-for-it.sh db:5432 -t 0 -- bash -ic \
     "/usr/bin/python3 ~/manage.py migrate && \
     /usr/bin/python3 ~/manage.py collectstatic --no-input && \
-    exec /usr/bin/python3 $HOME/manage.py runmodwsgi --log-to-terminal --port 8080 \
+    exec /usr/bin/python3 %(ENV_$HOME)s/manage.py runmodwsgi --log-to-terminal --port 8080 \
     --limit-request-body 1073741824 --log-level INFO --include-file ~/mod_wsgi.conf \
     %(ENV_DJANGO_MODWSGI_EXTRA_ARGS)s --locale %(ENV_LC_ALL)s"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
