--- a/supervisord.conf
+++ b/supervisord.conf
@@ -28,7 +28,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:rqworker_default]
-command=%(ENV_HOME)s/wait-for-it.sh cvat_redis:6379 -t 0 -- bash -ic \
+command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
     "exec /usr/bin/python3 %(ENV_HOME)s/manage.py rqworker -v 3 default"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=2
@@ -38,7 +38,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:rqworker_low]
-command=%(ENV_HOME)s/wait-for-it.sh redis:6379 -t 0 -- bash -ic \
+command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
     "exec /usr/bin/python3 %(ENV_HOME)s/manage.py rqworker -v 3 low"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
@@ -47,7 +47,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:git_status_updater]
-command=%(ENV_HOME)s/wait-for-it.sh redis:6379 -t 0 -- bash -ic \
+command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
     "/usr/bin/python3 ~/manage.py update_git_states"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
@@ -61,7 +61,8 @@ redirect_stderr=true
 ; apps are dynamically /var/log/supervisor/loaded by an environment variable. It can lead to issues
 ; with docker cache. Thus it is necessary to run collectstatic here for such
 ; apps.
-command=%(ENV_HOME)s/wait-for-it.sh db:5432 -t 0 -- bash -ic \
+; Fixme @Camilo @maciekrb  port shouldn't be hardcoded
+command=%(ENV_HOME)s/wait-for-it.sh %(ENV_DB_HOST)s:3306 -t 0 -- bash -ic \
     "/usr/bin/python3 ~/manage.py migrate && \
     /usr/bin/python3 ~/manage.py collectstatic --no-input && \
     exec /usr/bin/python3 %(ENV_HOME)s/manage.py runmodwsgi --log-to-terminal --port 8080 \
