--- a/supervisord.conf
+++ b/supervisord.conf
@@ -36,6 +36,7 @@ process_name=rqworker_default_%(process_num)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_USER)s
 
 [program:rqworker_low]
 command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
@@ -45,6 +46,7 @@ numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_USER)s
 
 [program:git_status_updater]
 command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
@@ -54,6 +56,7 @@ numprocs=1
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_USER)s
 
 [program:runserver]
 ; Here need to/var/log/supervisor/ run a couple of commands to initialize DB and copy static files.
@@ -72,3 +75,4 @@ environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_USER)s
