--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,17 +15,16 @@ logfile_maxbytes=0       ; maximum size of logfile before rotation
 logfile_backups=0          ; number of backed up logfiles
 loglevel=critical              ; info, debug, warn, trace
 pidfile=/var/run/supervisor/supervisord.pid ; pidfile location
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-user=root
+user=%(ENV_USER)s
 
 [program:ssh-agent]
 command=bash -c "rm /tmp/ssh-agent.sock -f && /usr/bin/ssh-agent -d -a /tmp/ssh-agent.sock"
 priority=1
 autorestart=true
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
+user=%(ENV_USER)s
 
 [program:rqworker_default]
 command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
@@ -33,7 +32,6 @@ command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=2
 process_name=rqworker_default_%(process_num)s
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_USER)s
@@ -43,7 +41,6 @@ command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
     "exec /usr/bin/python3 %(ENV_HOME)s/manage.py rqworker -v 3 low"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_USER)s
@@ -53,7 +50,6 @@ command=%(ENV_HOME)s/wait-for-it.sh %(ENV_REDIS_HOST)s:6379 -t 0 -- bash -ic \
     "/usr/bin/python3 ~/manage.py update_git_states"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
 numprocs=1
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_USER)s
@@ -72,7 +68,6 @@ command=%(ENV_HOME)s/wait-for-it.sh %(ENV_DB_HOST)s:3306 -t 0 -- bash -ic \
     --limit-request-body 1073741824 --log-level INFO --include-file ~/mod_wsgi.conf \
     %(ENV_DJANGO_MODWSGI_EXTRA_ARGS)s --locale %(ENV_LC_ALL)s"
 environment=SSH_AUTH_SOCK="/tmp/ssh-agent.sock"
-stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 user=%(ENV_USER)s
