added cv tf opencv

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,8 @@ services:
     build:
       context: .
       args:
-        TF_ANNOTATION: "no"
+        TF_ANNOTATION: "yes"
+        OPENVINO_TOOLKIT: "yes"
         USER: "django"
         DJANGO_CONFIGURATION: "production"
         WITH_TESTS: "no"
